--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,6 +35,9 @@
 </div>
 
 <div id="index">
+  <div class="article-wrap">
+    {{ content }}
+  </div><!-- /.article-wrap -->
   <h3><a href="{{ site.url}}/posts/">Recent Posts</a></h3>
   {% for post in site.posts limit:5 %}    
   <article>
@@ -43,6 +46,9 @@
     {% else %}
       <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
       <p>{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
+    {% endif %}
+    {% if site.disqus_shortname and page.comments %}
+      <section id="disqus_thread"></section><!-- /#disqus_thread -->
     {% endif %}
   </article>
   {% endfor %}
